# backend/swagger/swagger.yml
@@ -63,6 +63,68 @@ paths:
           description: ''
         '400':
           description: no enough input
+  /v1/user:
+    post:
+      tags:
+        - user
+      description: 用户注册
+      parameters:        
+        - in: body
+          name: body
+          description: 用户信息
+          schema:
+            $ref: '#/definitions/createUser'   
+      responses:
+        '200':
+          description: ''
+        '400':
+          description: no enough input
+  /v1/blog:
+    post:
+      tags:
+        - blog
+      description: 新增文章
+      parameters:        
+        - in: body
+          name: body
+          description: 文章
+          schema:
+            $ref: '#/definitions/createBlog'   
+      responses:
+        '200':
+          description: ''
+        '400':
+          description: no enough input
+  /v1/blog/{id}:
+    get:
+      tags:
+        - blog
+      parameters:
+        - in: header
+          name: token
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - in: path
+          name: id
+          description: 用户ID
+      description: 获取某用户的信息
+      responses:
+        '200':
+          description: ''
+        '400':
+          description: no enough input
+  /v1/blogs:
+    get:
+      tags:
+        - blog
+      description: 获取某用户的信息
+      responses:
+        '200':
+          description: ''
+        '400':
+          description: no enough input
   
 
 definitions:
@@ -72,6 +134,15 @@ definitions:
       userName:
         type: string 
       password:
+        type: string
+  createUser:
+    type: object
+    properties:
+      userName:
+        type: string 
+      password:
+        type: string
+      email:
         type: string
   userinfo:
     type: object
@@ -83,14 +154,26 @@ definitions:
       email:
         type: string
       password:
-        type: string  
-  
+        type: string
+  createBlog:
+    type: object
+    properties:
+      title: 
+        type: string
+      imgUrl: 
+        type: string
+      iconUrl: 
+        type: string
+      body: 
+        type: string
+      author: 
+        type: string
 
 tags:
   - name: user
     description: 用户相关API
-  - name: favorites_folder
-    description: 收藏夹目录
+  - name: blog
+    description: 文章
   - name: favorites
     description: 收藏站点
   - name: account
