# front/src/models/blog.js
@@ -2,7 +2,7 @@ import axios from 'axios';
 
 const Index = {
     getBlogs(params){
-        return axios.get(`/v1/user/login`) 
+        return axios.get(`/v1/blogs`) 
     }
 }
 
