# front/src/models/user.js
@@ -4,6 +4,9 @@ const Index = {
     getUser(){ 
         return axios.get(`/v1/user`) 
     },
+    createUser(params){
+        return axios.post('/v1/user', params) 
+    },
     login(params){
         return axios.post(`/v1/user/login`, params) 
     }
